--- a/public/css/2b01b.css
+++ b/public/css/2b01b.css
@@ -8283,7 +8283,8 @@ dl.variation *:last-child {
     color: #fff;
     background-color: #000;
     padding: 10px 15px;
-    margin: 0
+    margin: 0;
+    text-transform: uppercase;
 }
 
 .ovic-tab.style-02 .tab-title .icon-tab {
@@ -10471,7 +10472,7 @@ dl.variation *:last-child {
     right: 25px;
     max-width: 90px;
     bottom: 55px;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 20px;
     min-height: 40px;
     color: var(--default-color);
@@ -22888,16 +22889,16 @@ div.dgwt-wcas-overlay-mobile div.dgwt-wcas-search-wrapp .dgwt-wcas-sf-wrapp .sea
 }
 
 #primary {
-    width: 100% !important
+    width: 100%;
 }
 
 #secondary {
     padding: 0
 }
 
-body:not(.open-mobile-sidebar) #secondary {
+/* body:not(.open-mobile-sidebar) #secondary {
     transform: translateX(-100%)
-}
+} */
 
 #secondary {
     position: fixed;
@@ -22911,7 +22912,7 @@ body:not(.open-mobile-sidebar) #secondary {
     box-shadow: none;
     padding: 0;
     transition: .3s;
-    z-index: 100000;
+    z-index: 1;
     display: flex;
     flex-direction: column
 }
@@ -22954,12 +22955,12 @@ body:not(.open-mobile-sidebar) #secondary {
     line-height: 50px
 }
 
-.widget-area .sidebar-inner {
+/* .widget-area .sidebar-inner {
     flex: 1 1 auto;
     height: 1%;
     overflow-x: hidden;
     padding: 20px
-}
+} */
 
 .widget-area .widget .widget-title {
     font-size: 16px
