--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -893,6 +893,7 @@ img.alignright {
 .main-header .header-search-box .form-inline .input-serach input {
   border: none;
   padding-left: 15px;
+  padding-top: 9px;
   width: 100%;
 }
 
@@ -6007,4 +6008,8 @@ span.notify-right {
 .block-popular-cat .more:hover {
   color: #fff;
   opacity: 0.8;
+}
+
+ul#categoryMenuList li {
+  border-bottom: 1px solid #eaeaea;
 }
