--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -893,7 +893,6 @@ img.alignright {
 .main-header .header-search-box .form-inline .input-serach input {
   border: none;
   padding-left: 15px;
-  padding-top: 9px;
   width: 100%;
 }
 
@@ -2948,6 +2947,12 @@ span.notify-right {
   overflow: hidden;
 }
 
+.div-2 img {
+  float: right;
+  margin-top: 35px;
+  margin-right: 30px;
+}
+
 
 /*
 [14. footer]
@@ -3153,7 +3158,7 @@ span.notify-right {
   transition: all 0.3s;
 }
 
-.scroll_top {
+.scroll_top.footer {
   width: 34px;
   height: 34px;
   position: fixed;
@@ -3166,11 +3171,11 @@ span.notify-right {
   display: none;
 }
 
-.scroll_top:hover {
+.scroll_top.footer:hover {
   background: #F36;
 }
 
-.scroll_top:before {
+.scroll_top.footer:before {
   content: "\f106";
   font-family: "FontAwesome";
   font-size: 14px;
