--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -894,6 +894,7 @@ img.alignright {
   border: none;
   padding-left: 15px;
   width: 100%;
+  padding-top: 10px;
 }
 
 .main-header .header-search-box .form-inline .btn-search {
