Update Layout Header and Footer

--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -6019,3 +6019,8 @@ span.notify-right {
 ul#categoryMenuList li {
   border-bottom: 1px solid #eaeaea;
 }
+
+ul#introduce-company li img {
+  height: 100px;
+  margin-top: 10px;
+}
