--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -2945,14 +2945,14 @@ span.notify-right {
 .cate-box .div-2 {
   width: 54%;
   float: left;
-  padding-top: 10px;
+  /* padding-top: 10px; */
   overflow: hidden;
 }
 
 .div-2 img {
   float: right;
-  margin-top: 18px;
-  margin-right: 30px;
+  /* margin-top: 18px;
+  margin-right: 30px; */
 }
 
 
