update view slider

--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -1921,6 +1921,10 @@ span.notify-right {
   border: 1px solid #fff;
 }
 
+.homeslider li:hover {
+  cursor: pointer;
+}
+
 .bx-wrapper {
   margin: 0;
 }
