pemanggilan preventDefault dipindahkan ke dalam fungsi setTimeout line 281 owl js

--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -6107,6 +6107,10 @@ ul#contenhomeslider li {
   overflow: hidden;
 }
 
+.owl-carousel {
+  touch-action: auto;
+}
+
 @media (max-width: 767px) {
   .main-header .header-search-box .form-inline .input-serach input {
     padding-top: 0;
