Show Service in mobile

--- a/public/customer/assets/css/responsive.css
+++ b/public/customer/assets/css/responsive.css
@@ -491,9 +491,9 @@
 		height: 3px;
 	}
 
-	.service {
+	/* .service {
 		display: none;
-	}
+	} */
 
 	.nav-menu .navbar-brand,
 	.nav-menu .toggle-menu {
@@ -963,9 +963,9 @@
 		height: 3px;
 	}
 
-	.service {
+	/* .service {
 		display: none;
-	}
+	} */
 
 	.nav-menu .navbar-brand,
 	.nav-menu .toggle-menu {
