Bold Title Page and fix layout item product

--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -3798,6 +3798,7 @@ span.notify-right {
 
 .page-heading span.page-heading-title2 {
   text-transform: uppercase;
+  font-weight: 900;
 }
 
 .no-line {
