--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -1808,11 +1808,6 @@ span.notify-right {
   float: left;
 }
 
-.header-top-right .header-banner {
-  width: 26%;
-  float: right;
-}
-
 .header-top-right .homeslider img {
   width: 100%;
   height: auto;
@@ -2166,6 +2161,7 @@ span.notify-right {
   margin: 0;
   padding: 0;
   text-transform: uppercase;
+  font-size: 14px;
 }
 
 .service .service-item:last-child {
@@ -6120,20 +6116,10 @@ ul#contenhomeslider li {
     padding-top: 0;
   }
 
-  .header-top-right .homeslider .bx-wrapper .bx-pager {
-    bottom: 65px;
-    width: 60%;
-    padding-right: 0;
-  }
-
-  .header-top-right .header-banner {
-    width: 40%;
-  }
-
   .service .service-item .icon {
-    width: 100%;
-    height: auto;
     float: none;
+    display: table;
+    margin: 0 auto;
   }
 
   .service .service-item .icon img {
@@ -6146,7 +6132,10 @@ ul#contenhomeslider li {
     margin-left: 0;
     padding-top: 0;
     text-align: center;
-    min-height: 120px;
+  }
+
+  .service .service-item:nth-child(2) {
+    border-right: none;
   }
 }
 
