--- a/public/customer/assets/css/responsive.css
+++ b/public/customer/assets/css/responsive.css
@@ -1605,6 +1605,10 @@
 	#address-box {
 		display: block;
 	}
+
+	.service .service-item .info {
+		min-height: 60px;
+	}
 }
 
 @media (max-width: 400px) {
